# Bob

./: .gitignore  .gitmodules  Design Analysis.md  README.md
drivers/: bobTool.py  readData.sh
firmware/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  bob.h  genBin.sh  platformio.ini
firmware/.cargo/: config.toml
firmware/doc/: StateDiagram.drawio
firmware/include/: ansi.h  bob.h  flash.h  hat.h  sampler.h  shell.h  taskList.h  types.h
firmware/lib/: CMakeLists.txt
firmware/lib/bmp180/: CMakeLists.txt  README.md
firmware/lib/gps/: gps.c  gps.h
firmware/lib/hp203b/: CMakeLists.txt  hp203b.c  hp203b.h
firmware/lib/minmea/: minmea.c
firmware/lib/pico-lora/: LoRa-RP2040.cpp
firmware/lib/picoLog/: picolog.c
firmware/lib/qmc5883l/: CMakeLists.txt  qmc5883l.c  qmc5883l.h
firmware/lib/qmi8658c/: CMakeLists.txt  qmi8658c.c  qmi8658c.h
firmware/lib/rfm95/: LoRa.c  LoRa.h  README.md
firmware/lib/storfs/: CMakeLists.txt  LICENSE  storfs.h  storfs_config.h
firmware/lib/storfs/Documentation/: CONTRIBUTING.md
firmware/src/: CMakeLists.txt  README.md  ansi.h  bmp.c  bmp.h  bob.h  cmd.c  cmd.h  core1.c  core1.h  data.c  data.cpp  data.h  dataBuf.c  dataBuf.h  flash.c  hat.c  hat.cpp  hp203b.c  hp203b.h  lib.rs  logger.c  logger.h  main.c  main.rs  poller.c  qmc5883l.c  qmc5883l.h  sampler.c  sampler.h  sensors.c  sensors.h  shell.c  stateMachine.c  stateMachine.h  states.h  taskList.c  usbcmd.c  usbcmd.h  utils.c  (+1 more)
firmware/test/: minuinit.h
firmware/test/dataBuf/: main.c  test.h
kicad/: #auto_saved_files#  Bob.kicad_pro  Pyro.kicad_sch  bob.kicad_pcb  bob.kicad_pro  bob.kicad_sch  fp-lib-table  sym-lib-table
kicad/Logos.pretty/: YAR_Logo.kicad_mod  YAR_Logo_Small.kicad_mod
kicad/RP2040_minimal.pretty/: LGA-8_3.6x3.8x0.9P.kicad_mod  QMI8610.kicad_mod  RP2040-QFN-56_HS.kicad_mod
kicad/bob/: #auto_saved_files#  bob-B_Cu.gbr  bob-B_Mask.gbr  bob-B_Paste.gbr  bob-B_Silkscreen.gbr  bob-Edge_Cuts.gbr  bob-F_Cu.gbr  bob-F_Mask.gbr  bob-F_Paste.gbr  bob-F_Silkscreen.gbr  bob-NPTH.drl  bob-PTH.drl  bob-job.gbrjob  bob.kicad_pcb  bob.kicad_sch
